tests/NormalTests/paczka1/fuzzy1/14409727.err
Error in line 16: sh7 S192 54,0
Error in line 21: utpHkQlrK S902 19,5
